Mapped out directory

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
 </head>
 <body>
     <h1>Welcome to Aquarium Builder</h1>
-    
+    <div = "grid-container">
+
+        <div class = "build">
+            <!--Enter code for the converter here-->
+            <h4>Tank Size</h4>
+        </div>
+
+        <div class = "selections">
+            <h3>Selections</h3>
+            <!--Enter code for the selections here-->
+            <h4>Fish</h4>
+
+            <h4>Plants</h4>
+        </div>
+    </div>
 </body>
 </html>
