--- a/index.html
+++ b/index.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <h1>Welcome to Aquarium Builder</h1>
-    <div = "grid-container">
+    <div class = "grid-container">
 
         <div class = "build">
             <!--Enter code for the converter here-->
-            <h4>Tank Size</h4>
+            <h2>Environment</h2>
+
+            <h4>Water</h4>
+
+            <h4>Gallons</h4>
+            
         </div>
 
         <div class = "selections">
