--- a/index.html
+++ b/index.html
@@ -17,41 +17,24 @@
         <div>
             <div>
                 <div class = "build">
-                    <h2>Environment</h2>
 
-                    <h4>Water</h4>
-                        <input type="radio" id="freshWater" name="water" value="fresh">
-                        <label for="male">Fresh Water</label><br>
+                        <h2>Environment</h2>
 
-                        <input type="radio" id="saltWater" name="water" value="salt">
-                        <label for="male">Salt Water</label><br>
+                        <h4>Water</h4>
+                            <div class = "flex-container">
+                                <input type="radio" id="freshWater" name="water" value="fresh">
+                                <label for="fresh">Fresh Water</label><br>
 
-                    <h4>Gallons</h4>
+                                <input type="radio" id="saltWater" name="water" value="salt">
+                                <label for="salt">Salt Water</label><br>
+                            </div>
 
-                    <!--insert code for the converter here-->
-                    <input type="text" id="fname" name="fname"><br><br>
-                    <!-- Trigger/Open The Modal -->
-                    <button id="myBtn">Open Modal</button>
-
-                    <!-- The Modal -->
-                    <div id="myModal" class="modal">
-
-                    <!-- Modal content -->
-                    <div class="modal-content">
-                        <span class="close">&times;</span>
-                        <input type="text" id="fname" name="fname">
-                        <p>x</p>
-                        <input type="text" id="fname" name="fname">
-                        <p>x</p>
-                        <input type="text" id="fname" name="fname">
-                        <p>x</p>
-                    </div>
-
-                    </div>
+                        <h4>Gallons</h4>
 
                 </div>
             </div>
         </div>
+
 
         <div>
             <div class = "selections">
